# mcp-examples

./: .gitignore
3/mcp-crash-course/: langchain_client.py  main.py  pyproject.toml  server_langchain.py
3/mcp-crash-course/server/: math_server.py  weather_server.py
