[project]
name = "shellserver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.14",
    "asyncio>=3.4.3",
    "langchain-mcp-adapters>=0.1.7",
    "langchain[openai]>=0.3.26",
    "langgraph>=0.5.0",
    "mcp[cli]>=1.6.0",
    "python-dotenv>=1.1.0",
]
